--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-    "name": "src",
-    "version": "0.0.0",
-    "private": true,
+    "name": "webnode",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
     "scripts": {
         "dev": "nodemon src/index.js"
     },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
     "dependencies": {
-        "D": "^1.0.0",
-        "cookie-parser": "~1.4.4",
-        "debug": "~2.6.9",
+        "cookie-parser": "^1.4.5",
+        "debug": "^2.6.9",
         "dotenv": "^10.0.0",
-        "ejs": "^2.6.2",
-        "express": "~4.16.1",
-        "http-errors": "~1.6.3",
-        "morgan": "~1.9.1",
+        "ejs": "^3.1.6",
+        "express": "^4.17.1",
+        "http-errors": "^1.7.2",
+        "morgan": "^1.10.0",
         "pg": "^8.7.1"
     },
     "devDependencies": {
